--- a/app/src/main/res/layout/activity_internet.xml
+++ b/app/src/main/res/layout/activity_internet.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="11dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Button"
+        android:text="@string/txt_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
