--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7b1fa2</color>
-    <color name="colorPrimaryDark">#4a0073</color>
+    <color name="colorPrimary">#283593</color>
+    <color name="colorPrimaryDark">#001064</color>
     <color name="colorAccent">#01579b</color>
+    <color name="colorBgGray">#CACACA</color>
 </resources>
