--- a/app/src/main/res/layout/activity_internet.xml
+++ b/app/src/main/res/layout/activity_internet.xml
@@ -10,6 +10,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btn_internet_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="@string/txt_back"
+        app:layout_constraintEnd_toStartOf="@+id/btn_search_internet"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_search_internet" />
+
+    <Button
+        android:id="@+id/btn_internet_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/txt_next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_search_internet"
+        app:layout_constraintTop_toTopOf="@+id/btn_search_internet" />
+
     <WebView
         android:id="@+id/webView"
         android:layout_width="0dp"
