--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="Ingresa tu nombre"
+        android:hint="@string/ingresa_tu_nombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.524"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:onClick="fecha"
-        android:text="Fecha"
+        android:text="@string/fecha"
         app:layout_constraintEnd_toStartOf="@+id/fechaNacimiento"
         app:layout_constraintHorizontal_bias="0.837"
         app:layout_constraintStart_toStartOf="parent"
